--- a/css/theme.css
+++ b/css/theme.css
@@ -1,8 +1,9 @@
-body{
-	overflow-x:hidden;
-}
+
 .theme_bg{
-	background:url(../images/theme_background.jpg) center top;
+	background:#22a201;
+	min-width:320px;
+	background-size:100% ;
+	background-position: top center;
 }
 .logo{
 	padding-top:28%;
@@ -21,23 +22,25 @@ body{
 	width:70px;
 	height:70px;
 	display:table-cell;
-	background-image:url('../images/icon_bg.png');
-	background-repeat:no-repeat;
-	background-size:100% 100%;
+	/*background:url(../images/icon_bg.png) no-repeat;*/
 	vertical-align:middle;
 	text-align:center;
 }
 .ui-header{
-	background:url(../images/header_bg.png) !important;
+	background:url("../images/header_bg.png") repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
 	border:none !important;
+	border-bottom:none !important;
 	
+}
+.ui-header a{
+	box-shadow:none;
 }
 .ui-header .ui-title, .ui-footer .ui-title{
 	text-shadow:none !important;
 	color:#fff !important;
 	font-size:24px;
 	font-weight:normal;
-	margin:0 2%;
+	margin:0 23%;
 }
 .ui-icon-customrefresh:after {
 	background-image: url("../images/refresh_icon.png");
@@ -62,21 +65,11 @@ body{
 }
 
 
-.app_feature_list a{
-	color:#fff !important;
-	text-decoration:none;
-	cursor:pointer !important;
-}
-.app_feature_list a label{
-	cursor:pointer !important;
-}
-.app_feature_list a.item  img{
+/* custom setting of icons */
+.app_feature_list a img{
 	max-height:32px;
 	max-width:32px;
 }
-/* EDIT BY AMITOJ 18-Feb */
-
 <!--themebgcolor-->
-
 
 
