--- a/css/theme.css
+++ b/css/theme.css
@@ -1,75 +1,160 @@
 
+
 .theme_bg{
+
 	background:#22a201;
+
 	min-width:320px;
+
 	background-size:100% ;
+
 	background-position: top center;
-}
-.logo{
-	padding-top:28%;
-	transition:all ease .3s;
-	margin: 0 auto;
+
 }
 
+.logo{
+
+	padding-top:28%;
+
+	transition:all ease .3s;
+
+	margin: 0 auto;
+
+}
+
+
+
 .ui-footer {
+
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+
     border-bottom-width: 0;
+
     border-left-width: 0;
+
     border-right-width: 0;
+
     border-top: medium none !important;
+
 }
+
 .owl-demo .item{
+
 	width:70px;
+
 	height:70px;
+
 	display:table-cell;
+
 	/*background:url(../images/icon_bg.png) no-repeat;*/
+
 	vertical-align:middle;
+
 	text-align:center;
+
 }
+
 .ui-header{
+
 	background:url("../images/header_bg.png") repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+
 	border:none !important;
+
 	border-bottom:none !important;
+
 	
+
 }
+
 .ui-header a{
+
 	box-shadow:none;
+
 }
+
 .ui-header .ui-title, .ui-footer .ui-title{
+
 	text-shadow:none !important;
+
 	color:#fff !important;
+
 	font-size:24px;
+
 	font-weight:normal;
+
 	margin:0 23%;
+
 }
+
 .ui-icon-customrefresh:after {
+
 	background-image: url("../images/refresh_icon.png");
+
 	
+
 }
+
 .ui-icon-customrefresh:after{
+
 	background-color:none;
+
 	border:none;
+
 	border-radius:none;
+
 	height:42px;
+
 	width:42px;
+
 }
+
 .ui-header .ui-btn-icon-notext{
+
 	margin-top:11px;
+
 }
+
 .refresh_link,.help_link{
+
 	border:none !important;
+
 	background:none !important;
+
 }
+
 .refresh_link:hover,.refresh_link:active,.refresh_link:focus,.help_link:focus,.help_link:hover,.help_link:active{
+
 	box-shadow:none !important;
+
 }
+
+
+
 
 
 /* custom setting of icons */
+
 .app_feature_list a img{
+
 	max-height:32px;
+
 	max-width:32px;
+
 }
-<!--themebgcolor-->
+
+.theme_bg
+{
+	background-image:none;
+	background-repeat:no-repeat;
+	background-size:cover;	
+	background: linear-gradient(left , rgb(0, 0, 0) 1% , rgb(80, 177, 188) 6% , rgb(241, 213, 30) 12% , rgb(206, 77, 20) 24% , rgb(183, 16, 188) 29% , rgb(135, 212, 229) 33% , rgb(106, 230, 56) 46% , rgb(0, 0, 0) 80% , rgb(195, 11, 142) 83% , rgb(242, 52, 142) 96%);
+background: -o-linear-gradient(left , rgb(0, 0, 0) 1% , rgb(80, 177, 188) 6% , rgb(241, 213, 30) 12% , rgb(206, 77, 20) 24% , rgb(183, 16, 188) 29% , rgb(135, 212, 229) 33% , rgb(106, 230, 56) 46% , rgb(0, 0, 0) 80% , rgb(195, 11, 142) 83% , rgb(242, 52, 142) 96%);
+background: -ms-linear-gradient(left , rgb(0, 0, 0) 1% , rgb(80, 177, 188) 6% , rgb(241, 213, 30) 12% , rgb(206, 77, 20) 24% , rgb(183, 16, 188) 29% , rgb(135, 212, 229) 33% , rgb(106, 230, 56) 46% , rgb(0, 0, 0) 80% , rgb(195, 11, 142) 83% , rgb(242, 52, 142) 96%);
+background: -moz-linear-gradient(left , rgb(0, 0, 0) 1% , rgb(80, 177, 188) 6% , rgb(241, 213, 30) 12% , rgb(206, 77, 20) 24% , rgb(183, 16, 188) 29% , rgb(135, 212, 229) 33% , rgb(106, 230, 56) 46% , rgb(0, 0, 0) 80% , rgb(195, 11, 142) 83% , rgb(242, 52, 142) 96%);
+background: -webkit-linear-gradient(left , rgb(0, 0, 0) 1% , rgb(80, 177, 188) 6% , rgb(241, 213, 30) 12% , rgb(206, 77, 20) 24% , rgb(183, 16, 188) 29% , rgb(135, 212, 229) 33% , rgb(106, 230, 56) 46% , rgb(0, 0, 0) 80% , rgb(195, 11, 142) 83% , rgb(242, 52, 142) 96%);
+}
+
+
+
 
 
