--- a/css/theme.css
+++ b/css/theme.css
@@ -147,11 +147,11 @@
 	background-image:none;
 	background-repeat:no-repeat;
 	background-size:cover;	
-	background: linear-gradient(left , rgb(80, 177, 188) 6% , rgb(84, 0, 89) 9% , rgb(43, 110, 171) 13% , rgb(243, 92, 249) 14% , rgb(19, 151, 117) 18% , rgb(206, 77, 20) 24% , rgb(86, 114, 168) 24% , rgb(199, 154, 97) 28% , rgb(183, 16, 188) 29% , rgb(113, 18, 166) 29% , rgb(51, 140, 174) 52% , rgb(17, 2, 182) 59% , rgb(9, 81, 18) 72% , rgb(56, 245, 0) 77% , rgb(187, 237, 182) 88% , rgb(36, 100, 183) 89% , rgb(121, 220, 40) 90% , rgb(170, 216, 55) 91% , rgb(220, 113, 96) 92% , rgb(98, 228, 233) 99%);
-background: -o-linear-gradient(left , rgb(80, 177, 188) 6% , rgb(84, 0, 89) 9% , rgb(43, 110, 171) 13% , rgb(243, 92, 249) 14% , rgb(19, 151, 117) 18% , rgb(206, 77, 20) 24% , rgb(86, 114, 168) 24% , rgb(199, 154, 97) 28% , rgb(183, 16, 188) 29% , rgb(113, 18, 166) 29% , rgb(51, 140, 174) 52% , rgb(17, 2, 182) 59% , rgb(9, 81, 18) 72% , rgb(56, 245, 0) 77% , rgb(187, 237, 182) 88% , rgb(36, 100, 183) 89% , rgb(121, 220, 40) 90% , rgb(170, 216, 55) 91% , rgb(220, 113, 96) 92% , rgb(98, 228, 233) 99%);
-background: -ms-linear-gradient(left , rgb(80, 177, 188) 6% , rgb(84, 0, 89) 9% , rgb(43, 110, 171) 13% , rgb(243, 92, 249) 14% , rgb(19, 151, 117) 18% , rgb(206, 77, 20) 24% , rgb(86, 114, 168) 24% , rgb(199, 154, 97) 28% , rgb(183, 16, 188) 29% , rgb(113, 18, 166) 29% , rgb(51, 140, 174) 52% , rgb(17, 2, 182) 59% , rgb(9, 81, 18) 72% , rgb(56, 245, 0) 77% , rgb(187, 237, 182) 88% , rgb(36, 100, 183) 89% , rgb(121, 220, 40) 90% , rgb(170, 216, 55) 91% , rgb(220, 113, 96) 92% , rgb(98, 228, 233) 99%);
-background: -moz-linear-gradient(left , rgb(80, 177, 188) 6% , rgb(84, 0, 89) 9% , rgb(43, 110, 171) 13% , rgb(243, 92, 249) 14% , rgb(19, 151, 117) 18% , rgb(206, 77, 20) 24% , rgb(86, 114, 168) 24% , rgb(199, 154, 97) 28% , rgb(183, 16, 188) 29% , rgb(113, 18, 166) 29% , rgb(51, 140, 174) 52% , rgb(17, 2, 182) 59% , rgb(9, 81, 18) 72% , rgb(56, 245, 0) 77% , rgb(187, 237, 182) 88% , rgb(36, 100, 183) 89% , rgb(121, 220, 40) 90% , rgb(170, 216, 55) 91% , rgb(220, 113, 96) 92% , rgb(98, 228, 233) 99%);
-background: -webkit-linear-gradient(left , rgb(80, 177, 188) 6% , rgb(84, 0, 89) 9% , rgb(43, 110, 171) 13% , rgb(243, 92, 249) 14% , rgb(19, 151, 117) 18% , rgb(206, 77, 20) 24% , rgb(86, 114, 168) 24% , rgb(199, 154, 97) 28% , rgb(183, 16, 188) 29% , rgb(113, 18, 166) 29% , rgb(51, 140, 174) 52% , rgb(17, 2, 182) 59% , rgb(9, 81, 18) 72% , rgb(56, 245, 0) 77% , rgb(187, 237, 182) 88% , rgb(36, 100, 183) 89% , rgb(121, 220, 40) 90% , rgb(170, 216, 55) 91% , rgb(220, 113, 96) 92% , rgb(98, 228, 233) 99%);
+	background: linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
+background: -o-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
+background: -ms-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
+background: -moz-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
+background: -webkit-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
 }
 
 
