--- a/css/theme.css
+++ b/css/theme.css
@@ -147,11 +147,11 @@
 	background-image:none;
 	background-repeat:no-repeat;
 	background-size:cover;	
-	background: linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
-background: -o-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
-background: -ms-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
-background: -moz-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
-background: -webkit-linear-gradient(left , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(98, 228, 233) 99%);
+	background: linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
+background: -o-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
+background: -ms-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
+background: -moz-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
+background: -webkit-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
 }
 
 
