--- a/css/grid_menu.css
+++ b/css/grid_menu.css
@@ -1,7 +1,7 @@
 .grid_menu {
     margin: 0 auto;
-    width: 492px;
+    width: 320px;
 }
-.app_feature_list{
-	margin:0px 9%;
+.two_list .app_feature_list{
+		margin: 0 9%;
 }
