--- a/css/theme.css
+++ b/css/theme.css
@@ -1,14 +1,18 @@
+body,body.ui-overlay-a{
 
+	background:url("../images/repeat_bg.jpg") repeat-y scroll 0 0 rgba(0, 0, 0, 0) !important;
+
+	background-size:100% 100% !important;
+
+}
 
 .theme_bg{
 
-	background:#22a201;
+	background:url(../images/theme_background.jpg) center bottom no-repeat;
 
 	min-width:320px;
 
 	background-size:100% ;
-
-	background-position: top center;
 
 }
 
@@ -46,29 +50,23 @@
 
 	display:table-cell;
 
-	/*background:url(../images/icon_bg.png) no-repeat;*/
+	background:url(../images/icon_bg.png) no-repeat;
 
 	vertical-align:middle;
 
 	text-align:center;
 
+	background-size:100% 100%;
+
 }
 
 .ui-header{
 
-	background:url("../images/header_bg.png") repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+	background:url(../images/header_bg.png) !important;
 
 	border:none !important;
 
-	border-bottom:none !important;
-
 	
-
-}
-
-.ui-header a{
-
-	box-shadow:none;
 
 }
 
@@ -82,7 +80,7 @@
 
 	font-weight:normal;
 
-	margin:0 23%;
+	margin:0 25%;
 
 }
 
@@ -142,6 +140,8 @@
 
 }
 
+
+
 .theme_bg
 {
 	background-image:none;
@@ -153,8 +153,4 @@ background: -ms-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9%
 background: -moz-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
 background: -webkit-linear-gradient(left , rgb(103, 172, 123) 5% , rgb(84, 0, 89) 9% , rgb(19, 151, 117) 18% , rgb(51, 140, 174) 52% , rgb(180, 169, 117) 56% , rgb(158, 19, 111) 66% , rgb(108, 181, 222) 93% , rgb(98, 228, 233) 99% , rgb(92, 248, 242) 99%);
 }
-
-
-
-
 
